[tool.poetry]
name = "incapsulate-sqlalchemy-session-in-base-repository"
version = "0.1.0"
description = ""
authors = ["albertaleksandrov <albert-ugatu@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
